--- a/fontconfig/fonts.conf
+++ b/fontconfig/fonts.conf
@@ -1,36 +1,24 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-    <!-- 设置默认字体 -->
+    <!-- 设置英文字体优先 -->
     <match>
-        <edit name="family" mode="assign">
-            <string>FiraCodeNerdFontMono</string>
-        </edit>
-    </match>
-
-    <!-- 设置等宽字体 -->
-    <match>
-        <test name="family" compare="eq">
-            <string>monospace</string>
+        <test name="lang" compare="contains">
+            <string>en</string>
         </test>
-        <edit name="family" mode="assign">
-            <string>FiraCodeNerdFontMono</string>
+        <edit name="family" mode="prepend" binding="strong">
+            <string>FiraCode Nerd Font mono</string>
         </edit>
     </match>
 
-    <!-- 设置字体渲染选项 -->
+    <!-- 设置中文字体优先 -->
     <match>
-        <edit name="hinting" mode="assign">
-            <bool>true</bool>
-        </edit>
-        <edit name="autohint" mode="assign">
-            <bool>false</bool>
-        </edit>
-        <edit name="antialias" mode="assign">
-            <bool>true</bool>
-        </edit>
-        <edit name="rgba" mode="assign">
-            <const>rgb</const>
+        <test name="lang" compare="contains">
+            <string>zh</string>
+        </test>
+        <edit name="family" mode="prepend" binding="strong">
+            <string>LXGW WenKai Mono</string>
         </edit>
     </match>
+
 </fontconfig>
