modify font config

--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -6,7 +6,7 @@
         <test name="lang" compare="contains">
             <string>en</string>
         </test>
-        <edit name="family" mode="prepend" binding="strong">
+        <edit name="family" mode="prepend">
             <string>FiraCode Nerd Font mono</string>
         </edit>
     </match>
@@ -16,8 +16,8 @@
         <test name="lang" compare="contains">
             <string>zh</string>
         </test>
-        <edit name="family" mode="prepend" binding="strong">
-            <string>LXGW WenKai Mono</string>
+        <edit name="family" mode="prepend">
+            <string>Noto Serif CJK SC</string>
         </edit>
     </match>
 
