modify sway config

--- a/.config/sway/config
+++ b/.config/sway/config
@@ -229,6 +229,10 @@ bindsym $mod+r mode "resize"
 # Read `man 5 sway-bar` for more information about this section.
 
 
+bar status {
+    swaybar_command waybar
+}
+
 
 #bar {
 #    position top
