--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,8 +1,24 @@
-# set $lang "zh_CN.UTF-8"
-# font "FiraCodeNerdFontMono 10"
-
-#default_border none
+exec "export XWAYLAND_SCALE=1.25"  
+output DP-1 scale 1.25
+output * bg ~/.config/sway/wallpaper/goku.jpeg fill
 for_window [class=".*"] border pixel 1
+
+
+input "type:touchpad" {
+    tap enable
+}
+
+
+input "5426:138:Razer_Razer_Viper_Mini" {
+    accel_profile "flat"
+}
+
+bar status {
+    swaybar_command waybar
+}
+
+
+
 # Default config for sway
 #
 # Copy this to ~/.config/sway/config and edit it to your liking.
@@ -26,7 +42,7 @@ set $menu wofi --show drun
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg ~/.config/sway/wallpaper/goku.jpeg fill
+#output * bg /usr/share/backgrounds/sway/Sway_Wallpaper_Blue_1920x1080.png fill
 #
 # Example configuration:
 #
@@ -57,17 +73,6 @@ output * bg ~/.config/sway/wallpaper/goku.jpeg fill
 #       natural_scroll enabled
 #       middle_emulation enabled
 #   }
-
-input "type:touchpad" {
-    tap enable
-}
-
-
-input "5426:138:Razer_Razer_Viper_Mini" {
-    accel_profile "flat"
-}
-
-
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
@@ -227,25 +232,18 @@ bindsym $mod+r mode "resize"
 # Status Bar:
 #
 # Read `man 5 sway-bar` for more information about this section.
-
-
-bar status {
-    swaybar_command waybar
-}
-
-
 #bar {
-#    position top
+    #position top
 
     # When the status_command prints a new line to stdout, swaybar updates.
     # The default just shows the current date and time.
     #status_command while date +'%Y-%m-%d %X'; do sleep 1; done
 
-   # colors {
-   #     statusline #ffffff
-   #     background #323232
-  #      inactive_workspace #32323200 #32323200 #5c5c5c
- #   }
+    #colors {
+    #    statusline #ffffff
+    #    background #323232
+    #    inactive_workspace #32323200 #32323200 #5c5c5c
+    #}
 #}
 
 include /etc/sway/config.d/*
