--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,74 +1,39 @@
 {
-    "name": "bar1",
-    "spacing": 10,
-    "modules-left": [
-        "sway/workspaces",
-        "mpd",
-        "pulseaudio",
-    ],
-    "modules-center": [
-        "clock",
-        "custom/weather"
-        // "wireplumber"
-    ],
-    "modules-right": [
-        "temperature",
-        // "pulseaudio/slider",
-        // "load",
-        "cpu",
-        "battery",
-        "tray",
-    ],
-    "custom/weather": {
-        "exec": "bash ~/.config/waybar/script/weather.sh",
-        "interval": 600
-    },
-    "custom/net_speed": {
-        "exec": "~/.config/waybar/script/net_speed.sh",
-        "interval": 1,
-        "format": "{}"
-    },
-    "mpd": {
-        "format": "󰎇 {artist}-{title}",
-        "on-click": "mpc toggle",
-        "interval": 10
-    },
-    "clock": {
-        "format": " {:%Y-%m-%d %H:%M:%S}",
-        "interval": 1
-    },
-    "sway/workspaces": {
-        "format": "{name}"
-    },
-    "temperature": {
-        "format": " {}°C",
-        "interval": 20
-    },
-    "cpu": {
-        "format": " {usage}%",
-        "interval": 10
-    },
-    "battery": {
-        "format-full": "󱊣 {capacity}%",
-        "interval": 60
-    },
-    "pulseaudio": {
-        "format": " {volume}%",
-        "on-click": "pavucontrol"
-    },
-    "pulseaudio/slider": {
-        "min": 0,
-        "max": 100,
-        "orientation": "horizontal"
-    },
-    "tray": {
-        "spacing": 10
-    },
-    "wireplumber": {
-        "format": "{volume}%",
-        "format-muted": "",
-        "on-click": "helvum",
-        "max-volume": 150,
-        "scroll-step": 0.2
-    },
+  "layer": "top",
+  "modules-left": [
+    "sway/workspaces",
+    "pulseaudio"
+  ],
+  "modules-center": [
+    "clock"
+  ],
+  "modules-right": [
+    "temperature",
+    "cpu",
+    "memory",
+    "tray"
+  ],
+  "clock": {
+    "format": " {:%Y-%m-%d %H:%M}",
+    "tooltip": false
+  },
+  "cpu": {
+    "interval": 10,
+    "format": " {usage}%"
+  },
+  "memory": {
+    "interval": 10,
+    "format": " {percentage}%"
+  },
+  "temperature": {
+    "interval": 10,
+    "format": " {temperatureC}°C"
+  },
+  "pulseaudio": {
+    "format": "󰕾 {volume}%",
+    "on-click": "pavucontrol",
+    "format-muted": "󰖁",
+    "tooltip": false,
+    "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle"
+  }
 }
