--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1,4 +1,6 @@
-include dracula.conf
-term xterm-kitty
-font_family     FiraCodeNerdFontMono, monospace
-font_size       12
+font_size 16.0
+font_family FiraCode Nerd Font Mono
+bold_font auto  
+italic_font auto
+
+shell /usr/bin/zsh
