--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -7,7 +7,8 @@
   <!-- ================================================ -->
   <match target="pattern">
     <edit name="family" mode="assign" binding="strong">
-      <string>FiraCode Nerd Font Mono</string>
+      <string> CaskaydiaMono Nerd Font Mono </string>
+      <string> Iosevka Nerd Font Mono </string>
     </edit>
   </match>
 
