--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -1,16 +1,39 @@
 <?xml version="1.0"?>
 <!DOCTYPE fontconfig SYSTEM "fonts.dtd">
 <fontconfig>
-  <!-- ================================================ -->
-  <!-- 强制所有字体请求使用 Source Code Pro（极端配置） -->
-  <!-- 注意：这将覆盖所有字体（包括网页、文档等） -->
-  <!-- ================================================ -->
+
+  <!-- sans-serif -->
   <match target="pattern">
-    <edit name="family" mode="assign" binding="strong">
-      <string> CaskaydiaMono Nerd Font Mono </string>
-      <string> Iosevka Nerd Font Mono </string>
+    <test name="family" qual="any">
+      <string>sans-serif</string>
+    </test>
+    <edit name="family" mode="prepend" binding="same">
+      <string>CaskaydiaMono Nerd Font Mono</string>
+      <string>Noto Sans CJK SC</string>
     </edit>
   </match>
 
-  
+  <!-- monospace -->
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>monospace</string>
+    </test>
+    <edit name="family" mode="prepend" binding="same">
+      <string>CaskaydiaMono Nerd Font Mono</string>
+      <string>Iosevka Nerd Font Mono</string>
+    </edit>
+  </match>
+
+  <!-- serif -->
+  <match target="pattern">
+    <test name="family" qual="any">
+      <string>serif</string>
+    </test>
+    <edit name="family" mode="prepend" binding="same">
+
+      <string>CaskaydiaMono Nerd Font Mono</string>
+      <string>Noto Serif CJK SC</string>
+    </edit>
+  </match>
+
 </fontconfig>
