--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -20,7 +20,7 @@
   },
   "cpu": {
     "interval": 10,
-    "format": "󰻠 {usage}%",
+    "format": " {usage}%",
     "tooltip": false,
   },
   "memory": {
