modify waybar menu

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -3,7 +3,7 @@
   "position":"top",
   "spacing": 0,
   "modules-left": [
-    "sway/workspaces",
+    "hyprland/workspaces",
     "pulseaudio"
   ],
   "modules-center": [
