modify waybar sway hyprland config

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,5 +1,10 @@
-exec-once = waybar 
+exec-once = waybar -c ~/.config/waybar/config_hyprland.jsonc -s ~/.config/waybar/style_hyprland.css
 exec-once = hyprpaper
+
+xwayland {  
+    force_zero_scaling = false  
+    use_nearest_neighbor = true  
+}  
 
 render{
   direct_scanout = 2
@@ -108,7 +113,7 @@ general {
     gaps_in = 0
     gaps_out = 0
 
-    border_size = 0
+    border_size = 3
 
     # https://wiki.hyprland.org/Configuring/Variables/#variable-types for info about colors
     col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
