--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,5 +1,6 @@
-exec "export XWAYLAND_SCALE=1.25"  
-output DP-1 scale 1.25
+#exec "export XWAYLAND_SCALE=1.25"  
+exec "waybar -c ~/.config/waybar/config_sway.jsonc -s ~/.config/waybar/style_sway.css"
+output DP-1 scale 1.25 scale_filter smart
 output * bg ~/.config/sway/wallpaper/goku.jpeg fill
 for_window [class=".*"] border pixel 1
 
@@ -13,9 +14,9 @@ input "5426:138:Razer_Razer_Viper_Mini" {
     accel_profile "flat"
 }
 
-bar status {
-    swaybar_command waybar
-}
+# bar {
+#     swaybar_command waybar
+# }
 
 
 # ==== 截图快捷键设置 ====
@@ -27,7 +28,7 @@ bindsym Print exec grim ~/Pictures/screenshot-$(date +'%Y%m%d-%H%M%S').png
 bindsym Shift+Print exec grim -g "$(slurp)" ~/Pictures/screenshot-$(date +'%Y%m%d-%H%M%S').png
 
 # 区域截图并复制到剪贴板：Ctrl + Print
-bindsym Ctrl+print exec grim -g "$(slurp)" - | wl-copy
+bindsym Ctrl+Print exec grim -g "$(slurp)" - | wl-copy
 
 
 # Default config for sway
