--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,5 +1,5 @@
 #exec "export XWAYLAND_SCALE=1.25"  
-exec "waybar -c ~/.config/waybar/config_sway.jsonc -s ~/.config/waybar/style_sway.css"
+
 output DP-1 scale 1.25 scale_filter smart
 output * bg ~/.config/sway/wallpaper/goku.jpeg fill
 for_window [class=".*"] border pixel 1
@@ -14,9 +14,9 @@ input "5426:138:Razer_Razer_Viper_Mini" {
     accel_profile "flat"
 }
 
-# bar {
-#     swaybar_command waybar
-# }
+ bar {
+     swaybar_command waybar
+ }
 
 
 # ==== 截图快捷键设置 ====
