--- a/.config/fontconfig/fonts.conf
+++ b/.config/fontconfig/fonts.conf
@@ -9,6 +9,7 @@
     </test>
     <edit name="family" mode="prepend" binding="same">
       <string>CaskaydiaMono Nerd Font Mono</string>
+      <string>FiraCode Nerd Font Mono</string>
       <string>Noto Sans CJK SC</string>
     </edit>
   </match>
@@ -20,6 +21,7 @@
     </test>
     <edit name="family" mode="prepend" binding="same">
       <string>CaskaydiaMono Nerd Font Mono</string>
+      <string>FiraCode Nerd Font Mono</string>
       <string>Iosevka Nerd Font Mono</string>
     </edit>
   </match>
@@ -32,6 +34,7 @@
     <edit name="family" mode="prepend" binding="same">
 
       <string>CaskaydiaMono Nerd Font Mono</string>
+      <string>FiraCode Nerd Font Mono</string>
       <string>Noto Serif CJK SC</string>
     </edit>
   </match>
