--- a/.config/sway/config
+++ b/.config/sway/config
@@ -47,8 +47,8 @@ set $right l
 # Your preferred terminal emulator
 set $term foot
 # Your preferred application launcher
-set $menu rofi -show drun
-
+#set $menu rofi -show drun
+set $menu rofi -show drun -run-command "uwsm app -- {cmd}"
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
