--- a/.config/sway/config
+++ b/.config/sway/config
@@ -1,6 +1,8 @@
 # output DP-1 scale 1.25 scale_filter smart
 
-output DP-1 scale 1.00
+# output DP-1 mode 1920x1080 scale 1.00
+
+output DP-1 scale 1.00 scale_filter smart
 output * bg ~/.config/sway/wallpaper/goku.jpeg fill
 for_window [class=".*"] border pixel 1
 
